--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "career-path",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -79,5 +79,6 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
-  }
+  },
+  "description": "Career Path - AI-Powered Educational Excellence Platform"
 }
