--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-GROQ_API_KEY=AIzaSyD8EveBZpMa7cuiMofaNzEaMBl0u0crOIg
+PORT=5000
+JWT_SECRET=supersecret123
+GEMINI_API_KEY=AIzaSyC5NDyqi23NkV1aPFGJXIsTzBgbozTO6QY
