--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "build:all": "npm run build",
-    "start:backend": "node backend/server.js"
+    "start:backend": "node backend/server.js",
+    "dev:backend": "nodemon backend/server.js",
+    "start": "concurrently \"npm run dev\" \"npm run start:backend\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -43,6 +44,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -55,18 +57,18 @@
     "express": "^4.21.2",
     "framer-motion": "^12.23.16",
     "groq-sdk": "^0.32.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
-    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
-    "mysql2": "^3.15.0",
     "next-themes": "^0.3.0",
-    "npm": "^11.6.0",
     "openai": "^5.22.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
@@ -87,11 +89,13 @@
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "lovable-tagger": "^1.1.9",
+    "nodemon": "^3.1.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
