--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-VITE_API_URL=http://localhost:5000
+VITE_API_KEY=AIzaSyA8NZM4v1NAAAJZ0Bvu2CKUra6QqHGmpJg
+VITE_AUTH_DOMAIN=careerpath-app-a4758.firebaseapp.com
+VITE_PROJECT_ID=careerpath-app-a4758
+VITE_STORAGE_BUCKET=careerpath-app-a4758.appspot.com
+VITE_MESSAGING_SENDER_ID=602050341889
+VITE_APP_ID=1:602050341889:web:4f697f247fcad3ae1da400
+VITE_MEASUREMENT_ID=G-KXD8WFFRTY
